gcc/testsuite/algol68/compile/error-pragmat-access-2.a68
pr access Foo in "lala" pr
pr access Foo in "lele" pr { dg-error "multiple" } 

begin prio // = 8;
      op (int,int)int // = lala;
      proc lala = (int a, b) int: a + b;
      proc void jeje = skip;
      skip
end
